tests/baselines/reference/parser645086_1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser645086_1.ts (3 errors) ====
    var v = /[]/]/
                ~
!!! error TS1005: ',' expected.
                 ~
!!! error TS1134: Variable declaration expected.
                  
!!! error TS1109: Expression expected.